--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
-  
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Budget Tracker</title>
 </head>
 <script>
@@ -55,6 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="/db.js"></script>
   <script src="index.js"></script>
+  
 </body>
 
 </html>
